--- a/src/freelancing.html
+++ b/src/freelancing.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no">
         <meta name="description" content="هذه هي صفحة هبوط للمنتج" />
-        <title>صقحة هبوط للكتاب الأول</title>
+        <title>صفحة هبوط للكتاب طريقك للعمل الحُر
+            عبر الإنترنت</title>
         <script type="text/html" src="{require('index.js')}"></script>
 
     </head>
@@ -14,14 +15,15 @@
     <body>
 
         <header class="header">
-            <div class="overlay1">
+            <div class="overlay2">
                 <nav class="navbar">
-                    <a class="navbar-brand" href="./">
+                    <a class="navbar-brand" href=".">
                         <img src="./images/logo.png" alt="شعار المنتج">
                     </a>
                     <a href="#"
                         id="btn-shoppingcart"
-                        class="btn custom-btn-book1 btn-icon-book1"data-toggle="tooltip"
+                        class="btn custom-btn-book2 btn-icon-book2"
+                        data-toggle="tooltip"
                         data-placement="bottom" title="عربة
                         الشراء">
                         <i class="fas fa-shopping-cart"></i>
@@ -32,29 +34,31 @@
                         <div class="col-lg-5 order-lg-7 col-md-7 order-md-7">
                             <div class="header-text h4">
                                 <h4>
-                                    مدخل إلى تجربة المستخدم
-                                    <br>
-                                    (User Experience - UX)
+                                    طريقك للعمل الحُر
+                                    عبر الإنترنت
 
                                 </h4>
                                 <p class="summary">
-                                    يضع هذا الكتاب الموجز القارئ على أعتاب عالم
-                                    تصميم
-                                    تجربة المستخدمين، وهو علم له قواعده وأصوله
-                                    وأدواته،
-                                    .ويهدف إلى تعريف القارئ الممبتدئ بأساس هذا
-                                    العلم
-                                    ثم كيف مطبق على المنتجات الرقمية من مواقع
-                                    ويب خدمية وتطبيقات على الأجهزة
-                                    الذكية وصولا إلى التصميم الأمثل الذي يوفق
-                                    بين هدف المستخدم اولا وهدف الخدمة التجاري
-                                    الأمر الذي يعني منتجا ناجحا.
+                                    هذا الكتاب ليس وصفة سريعة للثراء!ويعدك
+                                    بجني آلاف الدولارات من خلال بقائك نائما في
+                                    البيت.لايقدم الكتاب وصفات سحرية للحصول على
+                                    ٥٠٠$
+                                    خلال ساعتين من خلال مواقع
+                                    خطيرة. ولا يعرض نماذج لأناس حصلو على مليون
+                                    دولار في
+                                    عامهم الأول بعد قراءة الكتاب!
+
+                                    كتاب واقعي. يلامس الحقيقة الصعبة بأنه من
+                                    الصعب الحصول
+                                    على وظيفة في الكثير من الدول العربية.ويخبرك
+                                    بأن هناك املا وبديلا.بل بديلا قويا قد يكون
+                                    افضل من الوظيفة بمراحل.
                                 </p>
                             </div>
                         </div>
                         <div class="col-lg-3 offset-lg-2 order-lg-1 col-md-5
                             order-md-1">
-                            <img src="./images/book1.png" alt="صورة الكتاب
+                            <img src="./images/book2.png" alt="صورة الكتاب
                                 الاول">
                         </div>
                     </div>
@@ -64,11 +68,11 @@
         <section class="books book1">
             <div class="container">
                 <div class="row">
-                    <ol class="breadcrumb custom-breadcrumb-book1">
+                    <ol class="breadcrumb custom-breadcrumb-book2">
                         <li>
                             <a href=".">الصفحة الرئيسية</a>
                         </li>
-                        <li class="active">الكتاب الأول</li>
+                        <li class="active">الكتاب الثاني</li>
                     </ol>
                 </div>
             </div>
@@ -81,31 +85,37 @@
                 <div class="images">
                     <div class="row">
                         <div class="col-md-4 col-12">
-                            <img src="./images/book1/img1.png" alt="صورة الكتاب
+                            <img src="./images/book2/book2-img1.png" alt="صورة
+                                الكتاب
                                 الاول">
 
                         </div>
                         <div class="col-md-4 col-12">
-                            <img src="./images/book1/img2.png" alt="صورة الكتاب
+                            <img src="./images/book2/book2-img2.png" alt="صورة
+                                الكتاب
                                 الثانية">
                         </div>
                         <div class="col-md-4 col-12">
-                            <img src="./images/book1/img3.png" alt="صورة الكتاب
+                            <img src="./images/book2/book2-img3.png" alt="صورة
+                                الكتاب
                                 الثالثة">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-12">
-                            <img src="./images/book1/img4.png" alt="صورة الكتاب
+                            <img src="./images/book2/book2-img4.png" alt="صورة
+                                الكتاب
                                 الرابعة">
 
                         </div>
                         <div class="col-md-4 col-12">
-                            <img src="./images/book1/img5.png" alt="صورة الكتاب
+                            <img src="./images/book2/book2-img5.png" alt="صورة
+                                الكتاب
                                 الخامسة">
                         </div>
                         <div class="col-md-4 col-12">
-                            <img src="./images/book1/img6.png" alt="صورة الكتاب
+                            <img src="./images/book2/book2-img6.png" alt="صورة
+                                الكتاب
                                 السادسة">
                         </div>
                     </div>
@@ -122,7 +132,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="text-center">
-                            <img src="./images/book1.png" alt="صورة الكتاب
+                            <img src="./images/book2.png" alt="صورة الكتاب
                                 الاول">
                         </div>
                     </div>
@@ -130,7 +140,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="text-center">
-                            <button type="submit" class="btn custom-btn-book1
+                            <button type="submit" class="btn custom-btn-book2
                                 custom-btn-with-icon add-to-cart-btn">
                                 <span>
                                     إضافة الى عربة الشراء
@@ -188,46 +198,46 @@
                 </div>
             </div>
         </section>
-        <footer>
+        <footer class="book2">
             <div class="container">
-                    <div class="clearfix">
-                        <div class="copyright float-right">
+                <div class="clearfix">
+                    <div class="copyright float-right">
 
-                        </div>
-                        <div class="social-icon float-left">
-                            <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <a href="https://www.facebook.com/"
-                                        class="facebook" title="facebook">
-                                        <i class="fab fa-facebook"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="https://www.instagram.com/"
-                                        class="instagram" title="instagram">
-                                        <i class="fab fa-instagram"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="https://www.google.com/"
-                                        title="google-plus"
-                                        class="google-plus">
-                                        <i class="fab fa-google"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="https://www.twitter.com/"
-                                        class="twitter" title="twitter">
-                                        <i class="fab fa-twitter"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
+                    <div class="social-icon float-left">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/"
+                                    class="facebook" title="facebook">
+                                    <i class="fab fa-facebook"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/"
+                                    class="instagram" title="instagram">
+                                    <i class="fab fa-instagram"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.google.com/"
+                                    title="google-plus"
+                                    class="google-plus">
+                                    <i class="fab fa-google"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.twitter.com/"
+                                    class="twitter" title="twitter">
+                                    <i class="fab fa-twitter"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
