--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no">
         <meta name="description" content="هذه هي صفحة هبوط للمنتج" />
-        <title>صقحة هبوط لكُتبك</title>
+        <title>صفحة هبوط لكُتبك</title>
         <script type="text/html" src="{require('index.js')}"></script>
 
     </head>
@@ -52,26 +52,37 @@
             <div class="container">
                 <div class="images">
                     <div class="row">
-                        <div class="col-md-6 col-12">
+                        <div class="col-md-4 col-12">
                             <div class="title1 text-center">
                                 <h5>
                                     الكتاب الأول
                                 </h5>
                             </div>
-                            <a href="book1.html" class="text-center">
+                            <a href="User-Experience.html" class="text-center">
                                 <img src="./images/book1.png" alt="صورة الكتاب
                                     الاول">
                             </a>
                         </div>
-                        <div class="col-md-6 col-12" id="book2">
+                        <div class="col-md-4 col-12" id="book2">
                             <div class="title1 text-center">
                                 <h5 id="book1">
                                     الكتاب الثاني
                                 </h5>
                             </div>
-                            <a href="book2.html">
+                            <a href="freelancing.html">
                                 <img src="./images/book2.png" alt="صورة الكتاب
                                     الثاني">
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-12" id="book2">
+                            <div class="title1 text-center">
+                                <h5 id="book1">
+                                    الكتاب الثالث
+                                </h5>
+                            </div>
+                            <a href="PostgreSQL.html">
+                                <img src="./images/book3.png" alt="صورة الكتاب
+                                    الثالث">
                             </a>
                         </div>
                     </div>
@@ -126,44 +137,44 @@
         </section>
         <footer>
             <div class="container">
-                    <div class="clearfix">
-                        <div class="copyright float-right">
+                <div class="clearfix">
+                    <div class="copyright float-right">
 
-                        </div>
-                        <div class="social-icon float-left">
-                            <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <a href="https://www.facebook.com/"
-                                        class="facebook" title="facebook">
-                                        <i class="fab fa-facebook"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="https://www.instagram.com/"
-                                        class="instagram" title="instagram">
-                                        <i class="fab fa-instagram"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="https://www.google.com/"
-                                        title="google-plus"
-                                        class="google-plus">
-                                        <i class="fab fa-google"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a href="https://www.twitter.com/"
-                                        class="twitter" title="twitter">
-                                        <i class="fab fa-twitter"
-                                            aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
+                    <div class="social-icon float-left">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/"
+                                    class="facebook" title="facebook">
+                                    <i class="fab fa-facebook"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/"
+                                    class="instagram" title="instagram">
+                                    <i class="fab fa-instagram"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.google.com/"
+                                    title="google-plus"
+                                    class="google-plus">
+                                    <i class="fab fa-google"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.twitter.com/"
+                                    class="twitter" title="twitter">
+                                    <i class="fab fa-twitter"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
